--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -7,3 +7,7 @@ $lightGreen: #86C232;
 // Optional Colors
 $darkGray: #474b4f;
 $lightGray: #6b6e70;
+
+// Type
+$bodyFont: 'Lato', sans-serif;
+$headingFont: 'Roboto', sans-serif;
