--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,3 +5,7 @@
 
 // Color and Type Variables
 @import './base/variables';
+
+// Fonts
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
