--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -1,8 +1,8 @@
 main {
-    background-color: white;
+    background-color: #fcfcfc;
     font-family: $bodyFont;
     
     h1{
-        color: $darkGray;
+        color: $black;
     }
 }
