--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -50,21 +50,25 @@ header{
     
 }
 
+
+
 .navbar-collapse {
     flex-basis: 100%;
     flex-grow: 1;
     align-items: center;
-    
-    //flex-direction: column;
-    //padding: 0.5rem 1rem;
     padding-left: 0;
     margin-bottom: 0;
-    
-    
-    
+
     a {
         color: $darkGray;
     }
+}
+
+.navbar-collapse ul a:focus,
+.navbar-collapse ul a:active,
+.navbar-collapse ul a:hover {
+    letter-spacing: 1px;
+    transition: all 0.5s ease 0s;
 }
 
 .collapsing {
@@ -84,7 +88,19 @@ h1 {
     margin: 0;
     font-size: 1.8em;
 }
-    
-    
+
+button {
+    background-color: #fcfcfc;
+}
+
+button p{
+    text-transform: uppercase;
+    color: $black;
+}
+
+.active {
+    font-style: italic;
+}
+
         
     
