--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -10,10 +10,26 @@ main {
         text-align: left;
     }
 
-    p{
-        color: $black;
-        font-size: 1em;
-        padding: 0 20px 5px 20px;
-        text-align: left;
-    }
+}
+
+.btn-div {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.btn-projects {
+    display: inline-block;
+    background-color: #fcfcfc;
+    font-family: $bodyFont;
+    text-transform: uppercase;
+    color: $black;
+    text-decoration: none;
+    cursor:pointer;
+    font-size: 1.5em;
+    
+        a {
+            text-decoration: none;
+            color: $black;
+            font-weight: 700;
+        }
 }
