--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -91,11 +91,19 @@ h1 {
 
 button {
     background-color: #fcfcfc;
+    border-radius: 6px;
+    border: 1px solid;
+    cursor: pointer;
+}
+
+.navbar-toggler {
+    padding: 5px 10px;
 }
 
 button p{
     text-transform: uppercase;
     color: $black;
+    font-weight: 700;
 }
 
 .active {
