--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -19,17 +19,18 @@ main {
 
 .btn-projects {
     display: inline-block;
-    background-color: #fcfcfc;
     font-family: $bodyFont;
     text-transform: uppercase;
-    color: $black;
     text-decoration: none;
-    cursor:pointer;
     font-size: 1.5em;
+    border-radius: 6px;
+    border: 1px solid;
+    padding: 10px 20px;
     
         a {
             text-decoration: none;
             color: $black;
             font-weight: 700;
+            
         }
 }
