--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -2,6 +2,7 @@ main {
     background-color: #fcfcfc;
     font-family: $bodyFont;
     margin-top: 30px;
+    height: 100vh;
     
     h1{
         color: $black;
