--- a/src/styles/base/_resets.scss
+++ b/src/styles/base/_resets.scss
@@ -7,7 +7,12 @@ html {
   }
   
   body {
-      margin: 0;
+    min-height: 100vh;
+    position: relative;
+    margin: 0;
+    padding-bottom: 100px; 
+    box-sizing: border-box;
+    
   }
   
   img {
@@ -19,3 +24,5 @@ html {
       border-collapse: collapse;
       border-spacing: 0;
   }
+
+ 
