--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,13 +2,28 @@ footer {
     display: flex;
     font-family: $headingFont;
     background-color: $black;
-    margin-top: 40px;
     width: 100%;
     text-transform: uppercase;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+
+    position: absolute;
+  bottom: 0;
+  height: 100px;
+
+}
+
+.contact {
+    display: inline-block;
+    margin-top: 10px;
     
+    a {
+        padding: 10px;
+    }
+
     p{
-        
-        padding: 5px;
         color: white;
+        font-size: 0.8em;
     }
 }
