--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -36,8 +36,20 @@ main {
         }
 }
 
-.vancouver-pic {
+.project-pic {
     text-align: center;
     padding: 10px;
-    margin-top: 70px;
+    margin-top: 20px;
+    display: inline-block;
+    justify-content: center;
+        img{
+            border-radius: 6px;
+            margin-top: 20px;
+            max-width: 80%;
+        }
 }
+
+.moviedb {
+    margin-bottom: 10px;
+}
+
