update to home/projects page
adding project titles to home.
adding github links to projects

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -9,5 +9,5 @@ $darkGray: #474b4f;
 $lightGray: #6b6e70;
 
 // Type
-$bodyFont: 'Lato', sans-serif;
-$headingFont: 'Roboto', sans-serif;
+$bodyFont: 'Open Sans', sans-serif;
+$headingFont: 'Montserrat', sans-serif;
