--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,7 +7,7 @@
 @import './base/variables';
 
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap');
 
 // Components
 @import './components/header';
