--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -55,8 +55,7 @@ main {
             border-radius: 6px;
             margin-top: 20px;
             max-width: 80%;
-            box-shadow: 5px 5px 10px $lightGray;
-            
+            box-shadow: 1px 1px 5px $lightGray;
         }
 }
 
@@ -67,6 +66,12 @@ main {
 
 .game-project {
     position: relative;
+
+    h1{
+        font-family: $headingFont;
+        text-transform: uppercase;
+        font-size: 4vw;
+    }
 
     svg {
         position: absolute;
@@ -82,6 +87,10 @@ main {
 
     h1{
         padding-top: 10px;
+        
+            font-family: $headingFont;
+            text-transform: uppercase;
+            font-size: 4vw;
     }
 
     svg {
@@ -95,6 +104,12 @@ main {
 
 .landing-page {
     position: relative;
+
+    h1{
+        font-family: $headingFont;
+        text-transform: uppercase;
+        font-size: 4vw;
+    }
 
     svg {
         position: absolute;
