--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,3 +15,6 @@
 @import './components/about';
 @import './components/footer';
 @import './components/projects';
+
+// Scroll to Top
+@import './base/scroll';
