--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -3,14 +3,12 @@ main {
     font-family: $bodyFont;
     margin-top: 30px;
     
-    
-    h1{
-        color: $black;
-        font-size: 1.1em;
-        padding: 0 20px 5px 20px;
-        text-align: left;
-    }
-
+        h1 {
+            color: $black;
+            font-size: 1.1em;
+            padding: 0 20px 5px 20px;
+            text-align: left;
+        }
 }
 
 .btn-div {
@@ -38,10 +36,10 @@ main {
 .btn-projects:hover {
     background-color: $black;
     transition: all 1s ease;
-    
-    a{
-        color: white;
-    }
+
+        a {
+            color: white;
+        }
 }
 
 .project-pic {
@@ -59,107 +57,42 @@ main {
         }
 }
 
-.game-project {
-    position: relative;
-
-    h1{
-        padding-top: 10px;
-        font-family: $headingFont;
-        text-transform: uppercase;
-        font-size: 4vw;
-    }
-
-    svg {
-        position: absolute;
-        top: 50%;
-        left: 45%;
-        opacity: 0;
-    }
-    
-}
-
-.moviedb {
-    position: relative;
-    margin-bottom: 10px;
-    h1 {
-        padding-top: 10px;
-        font-family: $headingFont;
-        text-transform: uppercase;
-        font-size: 4vw;
-    }
-
-    svg {
-        position: absolute;
-        top: 50%;
-        left: 45%;
-        opacity: 0;
-    }
-    
-}
-
+.game-project,
+.moviedb,
 .landing-page {
     position: relative;
+    margin-bottom: 10px;
+        h1 {
+            padding-top: 10px;
+            font-family: $headingFont;
+            text-transform: uppercase;
+            font-size: 4vw;
+        }
 
-    h1{
-        padding-top: 10px;
-        font-family: $headingFont;
-        text-transform: uppercase;
-        font-size: 4vw;
-    }
-
-    svg {
-        position: absolute;
-        top: 50%;
-        left: 45%;
-        opacity: 0;
-    }
-    
+        svg {
+            position: absolute;
+            top: 50%;
+            left: 45%;
+            opacity: 0;
+        }
 }
 
+.game-project:hover, 
+.game-project:active,
+.moviedb:hover, 
+.moviedb:active,
+.landing-page:hover, 
+.landing-page:active {
 
-.game-project:hover, .game-project:active {
-
-    img {
-        
-        transition: all 2s ease;
-        opacity: 0.2;
-    }
+        img { 
+            transition: all 2s ease;
+            opacity: 0.2;
+        }
     
-    svg{
-        transition: all 2s ease;
-        opacity: 1;
-        
-    }
-}
-
-.moviedb:hover, .moviedb:active {
-    
-    img {
-        
-        transition: all 2s ease;
-        opacity: 0.2;
-    }
-    
-    svg{
-        transition: all 2s ease;
-        opacity: 1;
-        
-    }
-}
-
-.landing-page:hover, .landing-page:active {
-    
-    img {
-        
-        transition: all 2s ease;
-        opacity: 0.2;
-    }
-    
-    svg{
-        transition: all 2s ease;
-        opacity: 1;
-        
-    }
+        svg {
+            transition: all 2s ease;
+            opacity: 1;
+        }
 }
 
 @media only screen and (min-width: 700px){
@@ -169,20 +102,27 @@ main {
         margin: auto;
     }
 
+    .game-project h1,
+    .moviedb h1,
+    .landing-page h1 {
+        
+        font-size: 3vw;      
+    }
 }
 
 @media only screen and (min-width: 900px){
 
-    .moviedb h1 {
-        font-size: 1.5em;
-    }
-
-    .game-project h1 {
-        font-size: 1.5em;
-    }
-
+    .moviedb h1,
+    .game-project h1, 
     .landing-page h1 {
         font-size: 1.5em;
     }
+    
+    .moviedb svg,
+    .game-project svg,
+    .landing-page svg {
+        size: 90px;
+            height: 90px;
+            width: 90px;
+    }
 }
-
