--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,16 +1,3 @@
-main {
-    background-color: #fcfcfc;
-    font-family: $bodyFont;
-    margin-top: 30px;
-
-    p{
-        color: $black;
-        font-size: 1em;
-        padding: 0 20px 5px 20px;
-        text-align: left;
-    }
-}
-
 .my-picture {
     text-align: center;
 
@@ -22,4 +9,28 @@ main {
         height: 200px;
         margin-bottom: 20px;
     }
+}
+
+.linkedin-contact {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    font-size: 1.3em;
+}
+
+.linkedin-contact p {
+
+        a{
+            display: flex;
+            justify-content: space-evenly;
+            margin: 10px;
+            svg {
+                size: 2em;
+                height: 2em;
+                width: 2em;
+            }
+
+        }
+
+        
 }
