--- a/src/styles/base/_scroll.scss
+++ b/src/styles/base/_scroll.scss
@@ -10,6 +10,7 @@
     animation: fadeIn 0.3s;
     transition: opacity 0.4s;
     opacity: 0.5;
+    max-width: 1140px;
   }
   
   .scrollTop:hover{
@@ -24,3 +25,4 @@
       opacity: 0.5;
     }
   }
+
