--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -10,7 +10,6 @@ footer {
 	position: absolute;
 	bottom: 0;
 	height: 100px;
-	
 }
 
 .contact {
@@ -18,11 +17,35 @@ footer {
 	margin-top: 10px;
 
 	a {
-		padding: 10px;
+		padding: 20px 20px 0 20px;
 	}
 
 	p {
 		color: white;
 		font-size: 0.8em;
 	}
+}
+
+@media only screen and (min-width: 700px){
+	.contact a {
+		padding: 30px 30px 0 30px;
+			svg {
+				size: 2.5em;
+                height: 2.5em;
+                width: 2.5em;
+			}
+	}
+
+}
+
+@media only screen and (min-width: 900px){
+	.contact a {
+		padding: 60px 60px 0 60px;
+			svg {
+				size: 2.7em;
+                height: 2.7em;
+                width: 2.7em;
+			}
+	}
+
 }
