--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -5,9 +5,9 @@
         border-radius: 6px;
         margin-top: 20px;
         max-width: 80%;
-        box-shadow: 5px 5px 10px #6b6e70;
         height: 200px;
         margin-bottom: 20px;
+        box-shadow: 1px 1px 5px $lightGray;
     }
 }
 
