--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -14,6 +14,16 @@
     margin-top: 15px;
 }
 
+.projects-list h1:hover,
+.projects-list h1:focus,
+.projects-list h1:active {
+    background-color: $black;
+    transition: all 1s ease;
+        a {
+            color: white;
+        }
+}
+
 .projects-list img {
     border-radius: 6px;
     margin-top: 15px;
@@ -26,6 +36,7 @@
     text-align: left;
     justify-content: space-evenly;
     margin: 15px;
+    font-size: 1.1em;
 }
 
 .react-reveal.github-link {
@@ -53,13 +64,6 @@
     color: $black;
     cursor: pointer;
     text-decoration: none;
-}
-
-.page-link a:focus,
-.page-link a:active,
-.page-link a:hover {
-    letter-spacing: 1px;
-    transition: all 0.5s ease 0s;
 }
 
 .react-reveal.page-link {
