--- a/src/styles/base/_scroll.scss
+++ b/src/styles/base/_scroll.scss
@@ -1,7 +1,7 @@
 .scrollTop {
     position: fixed; 
     width: 100%;
-    bottom: 20px;
+    bottom: 120px;
     align-items: center;
     height: 20px;
     justify-content: center;
@@ -9,8 +9,9 @@
     cursor: pointer;
     animation: fadeIn 0.3s;
     transition: opacity 0.4s;
-    opacity: 0.5;
+    opacity: 0.4;
     max-width: 1140px;
+    left: 40%;
   }
   
   .scrollTop:hover{
@@ -25,4 +26,18 @@
       opacity: 0.5;
     }
   }
+
+  @media only screen and (min-width: 700px) {
+  .scrollTop{
+    left: 45%;
+    }
+
+  }
+
+  @media only screen and (min-width: 1220px) {
+    .scrollTop{
+      left: 50%;
+      }
+  
+    }
 
