--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -11,7 +11,7 @@
     padding: 5px 10px;
     border-radius: 6px;
     text-transform: uppercase;
-    margin-top: 15px;
+    margin-top: 40px;
 }
 
 .projects-list h1:hover,
@@ -39,6 +39,15 @@
     font-size: 1em;
 }
 
+.project-01 {
+    border-top: none;
+}
+
+div[class*="project-"] {
+    margin-top: 30px;
+    border-top: 1px solid $black;
+}
+
 .react-reveal.github-link {
     display: block;
     text-align: center;
@@ -57,7 +66,7 @@
 
 .page-link {
     padding: 0 10px 5px 10px;
-    border-top: 1px solid $black;
+    
 }
 
 .page-link a {
@@ -84,8 +93,29 @@
             size: 2.2em;
             height: 2.2em;
             width: 2.2em;
-            
         }
+}
+
+.code-show h2 {
+    text-align: center;
+}
+
+.code-show h2 a {
+    text-transform: uppercase;
+    font-size: 0.8em;
+    color: $black;
+    cursor: pointer;
+    text-decoration: none;
+    border: 1.5px solid $black;
+    padding: 5px 10px;
+    
+}
+
+.code-show a:hover,
+.code-show a:focus,
+.code-show a:active {
+    transition: all 1s ease;
+    color: $lightGray;
 }
 
 @media only screen and (min-width: 700px){
