--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -12,7 +12,7 @@ main {
         h2 {
             color: $black;
             padding: 0 20px 5px 20px;
-            text-align: left;
+            text-align: center;
         }
         p{
             color: $black;
