--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -87,12 +87,12 @@ div[class*="project-"] {
 
 .react-reveal.created-with span {
     align-items: center;
-    vertical-align: middle;
     justify-content: space-evenly;
         svg {
             size: 2.2em;
             height: 2.2em;
             width: 2.2em;
+            vertical-align: text-bottom;
         }
 }
 
@@ -102,7 +102,7 @@ div[class*="project-"] {
 
 .code-show h2 a {
     text-transform: uppercase;
-    font-size: 0.8em;
+    font-size: 0.6em;
     color: $black;
     cursor: pointer;
     text-decoration: none;
@@ -124,6 +124,10 @@ div[class*="project-"] {
         max-width: 720px;
 }
 
+.code-show h2 a {
+    font-size: 0.8em;
+}
+
 }
 
 @media only screen and (min-width: 900px){
@@ -131,6 +135,10 @@ div[class*="project-"] {
         line-height: 26pt;
         font-size: 1.2em;
         max-width: 900px;
+}
+
+.code-show h2 a {
+    font-size: 1em;
 }
 
 }
