--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -31,7 +31,7 @@
     box-shadow: 1px 1px 5px $lightGray;
 }
 
-.projects-list p {
+.projects-list h2 {
     display: inline-block;
     text-align: left;
     justify-content: space-evenly;
@@ -52,6 +52,7 @@ div[class*="project-"] {
     display: block;
     text-align: center;
     margin: 0;
+
 }
 
 .github-link a{
@@ -83,6 +84,7 @@ div[class*="project-"] {
 
 .react-reveal.created-with {
     justify-content: space-evenly;
+
 }
 
 .react-reveal.created-with span {
@@ -119,7 +121,7 @@ div[class*="project-"] {
 }
 
 @media only screen and (min-width: 700px){
-    .projects-list p {
+    .projects-list h2 {
         font-size: 1.1em;
         max-width: 720px;
 }
@@ -131,9 +133,8 @@ div[class*="project-"] {
 }
 
 @media only screen and (min-width: 900px){
-    .projects-list p {
+    .projects-list h2 {
         line-height: 26pt;
-        font-size: 1.2em;
         max-width: 900px;
 }
 
