--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -12,7 +12,8 @@ main {
         h2 {
             color: $black;
             padding: 0 20px 5px 20px;
-            text-align: center;
+            text-align: left;
+            font-size: 1.2em;
         }
         p{
             color: $black;
@@ -85,6 +86,12 @@ main {
             font-family: $headingFont;
             margin-bottom: 20px;
         }
+
+        h2{
+            padding-top: 10px;
+            font-family: $headingFont;
+            margin-bottom: 20px;
+        }
         img{
             border-radius: 6px;
             margin-top: 20px;
@@ -112,6 +119,11 @@ main {
                 font-size: 1.2em;
             }
 
+            h3{
+                font-size: 1.1em;
+                }
+            
+
             p {
                 font-size: 1.1em;
                 max-width: 750px;
@@ -124,6 +136,10 @@ main {
         h2 {
             font-size: 2.5vw;
         }
+
+        h3 {
+            font-size: 2.4vw;
+        }
     }
 }
 
@@ -132,17 +148,23 @@ main {
         h1 {
             font-size: 1.5em
         }
+
+        h2 {
+            font-size: 1.4em
+        }
         p {
             font-size: 1.2em;
             max-width: 900px;
         }
     }
     
-    .featured-project h1 {
+    .featured-project h2 {
         font-size: 1.4em;
     }
 
-    .featured-project h2 {
+
+
+    .featured-project h3 {
         font-size: 1.2em;
     }
 
