--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -6,17 +6,18 @@
     justify-content: center;
 }
 
-.projects-list h1 {
+.projects-list h2 {
     border: 1.5px solid $black;
     padding: 5px 10px;
     border-radius: 6px;
     text-transform: uppercase;
     margin-top: 40px;
+    font-size: 1em;
 }
 
-.projects-list h1:hover,
-.projects-list h1:focus,
-.projects-list h1:active {
+.projects-list h2:hover,
+.projects-list h2:focus,
+.projects-list h2:active {
     background-color: $black;
     transition: all 1s ease;
         a {
@@ -31,7 +32,7 @@
     box-shadow: 1px 1px 5px $lightGray;
 }
 
-.projects-list h2 {
+.projects-list h3 {
     display: inline-block;
     text-align: left;
     justify-content: space-evenly;
@@ -98,11 +99,11 @@ div[class*="project-"] {
         }
 }
 
-.code-show h2 {
+.code-show h3 {
     text-align: center;
 }
 
-.code-show h2 a {
+.code-show h3 a {
     text-transform: uppercase;
     font-size: 0.6em;
     color: $black;
@@ -122,11 +123,15 @@ div[class*="project-"] {
 
 @media only screen and (min-width: 700px){
     .projects-list h2 {
+        font-size: 1.2em;
+    }
+    
+    .projects-list h3 {
         font-size: 1.1em;
         max-width: 720px;
 }
 
-.code-show h2 a {
+.code-show h3 a {
     font-size: 0.8em;
 }
 
@@ -134,11 +139,15 @@ div[class*="project-"] {
 
 @media only screen and (min-width: 900px){
     .projects-list h2 {
+        font-size: 1.4em
+    }
+
+    .projects-list h3 {
         line-height: 26pt;
         max-width: 900px;
 }
 
-.code-show h2 a {
+.code-show h3 a {
     font-size: 1em;
 }
 
