--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -105,7 +105,7 @@ div[class*="project-"] {
 
 .code-show h3 a {
     text-transform: uppercase;
-    font-size: 0.6em;
+    font-size: 0.7em;
     color: $black;
     cursor: pointer;
     text-decoration: none;
@@ -119,6 +119,12 @@ div[class*="project-"] {
 .code-show a:active {
     transition: all 1s ease;
     color: $lightGray;
+}
+
+@media only screen and (min-width: 500px){
+    .code-show h3 a {
+        font-size: 0.9em;
+    }
 }
 
 @media only screen and (min-width: 700px){
