dark mode updates

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,6 +15,7 @@
 @import './components/about';
 @import './components/footer';
 @import './components/projects';
+@import './components/dark';
 
 // Scroll to Top
 @import './base/scroll';
