updated logo color for dark theme

--- a/src/styles/components/_dark.scss
+++ b/src/styles/components/_dark.scss
@@ -15,6 +15,10 @@
             }
     }
 
+    .logo-link h1 {
+        color: $lightGreen;
+    }
+
     .navbar-toggler {
         color: $lightGray;
     }
